2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Add save method that proxies to add for now.
	* python/mushin/maemo/new.py:
	  Make NewWindow Loggable.
	  Use the finish method.
	  Rework date button resetting.
	  Add recurrence/duration.
	  Make complete finish the task, optionally rescheduling.
	* python/mushin/maemo/start.py:
	  Actually save the updated version now that everything seems to work.

2010-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Make a Thing loggable.
	  Add a finish method that implements rescheduling.
	* python/mushin/command/main.py:
	  Use the finish method.

2010-08-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Use the add/edit widget when clicking on a thing in a list, so
	  we can update it later.

2010-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Rearrange widgets in a table, make stuff look a lot nicer.

2010-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Add a comment.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Add flags.
	  Allow deleting all items from projects/contexts/flags
	  Change button to update or add.
	  Factor out some common functions.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	  Activate debug logging.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Make StartWindow loggable.
	  Handle failures when getting lists or adding to show CouchDB
	  is not running.
	  Fix shopping list count by getting by context, although we're
	  still wrong since we count closed shopping items too.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py: